tests/paczka1/fuzzy1/63304527.err
Error in line 4: A796 A796 28,5
Error in line 7: A796 A829 45,2
Error in line 16: A796 A796 89,8
Error in line 19: A796 A519 24,5
Error in line 32: 6YpkxGJCRb A829 28,8
